// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`debug 1`] = `
"<View>
  <Text>
    Is the banana fresh?
  </Text>
  <Text
    testID=\\"bananaFresh\\"
  >
    not fresh
  </Text>
  <TextInput
    placeholder=\\"Add custom freshness\\"
    testID=\\"bananaCustomFreshness\\"
    value=\\"Custom Freshie\\"
  />
  <TextInput
    defaultValue=\\"What did you inspect?\\"
    placeholder=\\"Who inspected freshness?\\"
    testID=\\"bananaChef\\"
    value=\\"I inspected freshie\\"
  />
  <TextInput
    defaultValue=\\"What banana?\\"
  />
  <TextInput
    defaultValue=\\"hello\\"
    value=\\"\\"
  />
  <View
    accessible={true}
    collapsable={false}
    focusable={true}
    onClick={[Function onClick]}
    onResponderGrant={[Function onResponderGrant]}
    onResponderMove={[Function onResponderMove]}
    onResponderRelease={[Function onResponderRelease]}
    onResponderTerminate={[Function onResponderTerminate]}
    onResponderTerminationRequest={[Function onResponderTerminationRequest]}
    onStartShouldSetResponder={[Function onStartShouldSetResponder]}
    style={
      Object {
        \\"opacity\\": 1,
      }
    }
  >
    <Text>
      Change freshness!
    </Text>
  </View>
  <Text
    testID=\\"duplicateText\\"
  >
    First Text
  </Text>
  <Text
    testID=\\"duplicateText\\"
  >
    Second Text
  </Text>
  <Text>
    0
  </Text>
</View>"
`;

exports[`debug changing component: bananaFresh button message should now be "fresh" 1`] = `
"<View>
  <Text>
    Is the banana fresh?
  </Text>
  <Text
    testID=\\"bananaFresh\\"
  >
    fresh
  </Text>
  <TextInput
    placeholder=\\"Add custom freshness\\"
    testID=\\"bananaCustomFreshness\\"
    value=\\"Custom Freshie\\"
  />
  <TextInput
    defaultValue=\\"What did you inspect?\\"
    placeholder=\\"Who inspected freshness?\\"
    testID=\\"bananaChef\\"
    value=\\"I inspected freshie\\"
  />
  <TextInput
    defaultValue=\\"What banana?\\"
  />
  <TextInput
    defaultValue=\\"hello\\"
    value=\\"\\"
  />
  <View
    accessible={true}
    collapsable={false}
    focusable={true}
    onClick={[Function onClick]}
    onResponderGrant={[Function onResponderGrant]}
    onResponderMove={[Function onResponderMove]}
    onResponderRelease={[Function onResponderRelease]}
    onResponderTerminate={[Function onResponderTerminate]}
    onResponderTerminationRequest={[Function onResponderTerminationRequest]}
    onStartShouldSetResponder={[Function onStartShouldSetResponder]}
    style={
      Object {
        \\"opacity\\": 1,
      }
    }
  >
    <Text>
      Change freshness!
    </Text>
  </View>
  <Text
    testID=\\"duplicateText\\"
  >
    First Text
  </Text>
  <Text
    testID=\\"duplicateText\\"
  >
    Second Text
  </Text>
  <Text>
    0
  </Text>
</View>"
`;

exports[`debug: shallow 1`] = `
"<View>
  <Text>
    Is the banana fresh?
  </Text>
  <Text
    testID=\\"bananaFresh\\"
  >
    not fresh
  </Text>
  <TextInput
    placeholder=\\"Add custom freshness\\"
    testID=\\"bananaCustomFreshness\\"
    value=\\"Custom Freshie\\"
  />
  <TextInput
    defaultValue=\\"What did you inspect?\\"
    placeholder=\\"Who inspected freshness?\\"
    testID=\\"bananaChef\\"
    value=\\"I inspected freshie\\"
  />
  <TextInput
    defaultValue=\\"What banana?\\"
  />
  <TextInput
    defaultValue=\\"hello\\"
    value=\\"\\"
  />
  <MyButton
    onPress={[Function anonymous]}
    type=\\"primary\\"
  >
    Change freshness!
  </MyButton>
  <Text
    testID=\\"duplicateText\\"
  >
    First Text
  </Text>
  <Text
    testID=\\"duplicateText\\"
  >
    Second Text
  </Text>
  <Text>
    0
  </Text>
</View>"
`;

exports[`debug: shallow with message 1`] = `
"my other custom message

<View>
  <Text>
    Is the banana fresh?
  </Text>
  <Text
    testID=\\"bananaFresh\\"
  >
    not fresh
  </Text>
  <TextInput
    placeholder=\\"Add custom freshness\\"
    testID=\\"bananaCustomFreshness\\"
    value=\\"Custom Freshie\\"
  />
  <TextInput
    defaultValue=\\"What did you inspect?\\"
    placeholder=\\"Who inspected freshness?\\"
    testID=\\"bananaChef\\"
    value=\\"I inspected freshie\\"
  />
  <TextInput
    defaultValue=\\"What banana?\\"
  />
  <TextInput
    defaultValue=\\"hello\\"
    value=\\"\\"
  />
  <MyButton
    onPress={[Function anonymous]}
    type=\\"primary\\"
  >
    Change freshness!
  </MyButton>
  <Text
    testID=\\"duplicateText\\"
  >
    First Text
  </Text>
  <Text
    testID=\\"duplicateText\\"
  >
    Second Text
  </Text>
  <Text>
    0
  </Text>
</View>"
`;

exports[`debug: with message 1`] = `
"my custom message

<View>
  <Text>
    Is the banana fresh?
  </Text>
  <Text
    testID=\\"bananaFresh\\"
  >
    not fresh
  </Text>
  <TextInput
    placeholder=\\"Add custom freshness\\"
    testID=\\"bananaCustomFreshness\\"
    value=\\"Custom Freshie\\"
  />
  <TextInput
    defaultValue=\\"What did you inspect?\\"
    placeholder=\\"Who inspected freshness?\\"
    testID=\\"bananaChef\\"
    value=\\"I inspected freshie\\"
  />
  <TextInput
    defaultValue=\\"What banana?\\"
  />
  <TextInput
    defaultValue=\\"hello\\"
    value=\\"\\"
  />
  <View
    accessible={true}
    collapsable={false}
    focusable={true}
    onClick={[Function onClick]}
    onResponderGrant={[Function onResponderGrant]}
    onResponderMove={[Function onResponderMove]}
    onResponderRelease={[Function onResponderRelease]}
    onResponderTerminate={[Function onResponderTerminate]}
    onResponderTerminationRequest={[Function onResponderTerminationRequest]}
    onStartShouldSetResponder={[Function onStartShouldSetResponder]}
    style={
      Object {
        \\"opacity\\": 1,
      }
    }
  >
    <Text>
      Change freshness!
    </Text>
  </View>
  <Text
    testID=\\"duplicateText\\"
  >
    First Text
  </Text>
  <Text
    testID=\\"duplicateText\\"
  >
    Second Text
  </Text>
  <Text>
    0
  </Text>
</View>"
`;

exports[`toJSON 1`] = `
<View
  accessible={true}
  collapsable={false}
  focusable={false}
  onClick={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    Object {
      "opacity": 1,
    }
  }
>
  <Text>
    press me
  </Text>
</View>
`;
